examples/test/testpolicy3917.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3917
  namespace: namespace23
spec:
  podSelector:
    matchLabels:
      key44: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value31
          key14: value7
      podSelector:
        matchLabels:
          key14: value19
          key3: value37
          key44: value46
